Issue regarding filter text box.
Modified filter textbox on entry screen.

--- a/HCCGo/app/css/application.less
+++ b/HCCGo/app/css/application.less
@@ -116,9 +116,11 @@ body {
 }
 
 .card {
-  .box-shadow(0 12px 15px rgba(0, 0, 0, 0.24));
-  background-color: @whiteBackground;
-  padding: 0.5em;
+    background-color: @whiteBackground;
+    border-radius: 20px;
+    padding: .8em;
+    width: 40%;
+    .box-shadow: 0px;
 }
 
 .cluster {
